// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selection should display an error 1`] = `
<div
  className="visualization__select"
>
  <div
    className="visualization__select-error"
    style={
      Object {
        "transform": "scaleY(1)",
      }
    }
  >
    Test error
  </div>
  <Upload
    accept=""
    action=""
    beforeUpload={[Function]}
    className=""
    data={Object {}}
    disabled={false}
    listType="text"
    multiple={false}
    name="file"
    onChange={[Function]}
    prefixCls="ant-upload"
    showUploadList={true}
    supportServerRender={true}
    type="select"
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <FontAwesomeIcon$1
        border={false}
        className="FileInput-fa-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f319",
              "M384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm48 140c0-6.6-5.4-12-12-12h-60v-60c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v60h-60c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h60v60c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12v-60h60c6.6 0 12-5.4 12-12v-40z",
            ],
            "iconName": "file-plus",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
       Select File
    </Button>
  </Upload>
  <div
    className="visualization__select-loading"
    style={
      Object {
        "transform": "scaleY(0)",
      }
    }
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f013",
            "M444.788 291.1l42.616 24.599c4.867 2.809 7.126 8.618 5.459 13.985-11.07 35.642-29.97 67.842-54.689 94.586a12.016 12.016 0 0 1-14.832 2.254l-42.584-24.595a191.577 191.577 0 0 1-60.759 35.13v49.182a12.01 12.01 0 0 1-9.377 11.718c-34.956 7.85-72.499 8.256-109.219.007-5.49-1.233-9.403-6.096-9.403-11.723v-49.184a191.555 191.555 0 0 1-60.759-35.13l-42.584 24.595a12.016 12.016 0 0 1-14.832-2.254c-24.718-26.744-43.619-58.944-54.689-94.586-1.667-5.366.592-11.175 5.459-13.985L67.212 291.1a193.48 193.48 0 0 1 0-70.199l-42.616-24.599c-4.867-2.809-7.126-8.618-5.459-13.985 11.07-35.642 29.97-67.842 54.689-94.586a12.016 12.016 0 0 1 14.832-2.254l42.584 24.595a191.577 191.577 0 0 1 60.759-35.13V25.759a12.01 12.01 0 0 1 9.377-11.718c34.956-7.85 72.499-8.256 109.219-.007 5.49 1.233 9.403 6.096 9.403 11.723v49.184a191.555 191.555 0 0 1 60.759 35.13l42.584-24.595a12.016 12.016 0 0 1 14.832 2.254c24.718 26.744 43.619 58.944 54.689 94.586 1.667 5.366-.592 11.175-5.459 13.985L444.788 220.9a193.485 193.485 0 0 1 0 70.2zM336 256c0-44.112-35.888-80-80-80s-80 35.888-80 80 35.888 80 80 80 80-35.888 80-80z",
          ],
          "iconName": "cog",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={true}
      symbol={false}
      transform={null}
    />
     loading...
  </div>
  <div
    className="visualization__select-instructions"
  >
    Select the image to display interactively. This file must be JSON format (extension .json). If you have downloaded an analysis results folder from ProHits-viz these files will be located in the "interactive" subfolder. See the
     
    <Component
      className="visualization__select-instructions-link"
      to="/help/visualization/format"
    >
      help
    </Component>
     
    for information on the input format. If you would like to test a sample file, click
     
    <Component
      className="visualization__select-instructions-link"
      to="/visualization/samplefile/dotplot"
    >
      here
    </Component>
    .
  </div>
  <BrowserSession />
</div>
`;

exports[`Selection should display default view 1`] = `
<div
  className="visualization__select"
>
  <div
    className="visualization__select-error"
    style={
      Object {
        "transform": "scaleY(0)",
      }
    }
  />
  <Upload
    accept=""
    action=""
    beforeUpload={[Function]}
    className=""
    data={Object {}}
    disabled={false}
    listType="text"
    multiple={false}
    name="file"
    onChange={[Function]}
    prefixCls="ant-upload"
    showUploadList={true}
    supportServerRender={true}
    type="select"
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <FontAwesomeIcon$1
        border={false}
        className="FileInput-fa-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f319",
              "M384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm48 140c0-6.6-5.4-12-12-12h-60v-60c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v60h-60c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h60v60c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12v-60h60c6.6 0 12-5.4 12-12v-40z",
            ],
            "iconName": "file-plus",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
       Select File
    </Button>
  </Upload>
  <div
    className="visualization__select-loading"
    style={
      Object {
        "transform": "scaleY(0)",
      }
    }
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f013",
            "M444.788 291.1l42.616 24.599c4.867 2.809 7.126 8.618 5.459 13.985-11.07 35.642-29.97 67.842-54.689 94.586a12.016 12.016 0 0 1-14.832 2.254l-42.584-24.595a191.577 191.577 0 0 1-60.759 35.13v49.182a12.01 12.01 0 0 1-9.377 11.718c-34.956 7.85-72.499 8.256-109.219.007-5.49-1.233-9.403-6.096-9.403-11.723v-49.184a191.555 191.555 0 0 1-60.759-35.13l-42.584 24.595a12.016 12.016 0 0 1-14.832-2.254c-24.718-26.744-43.619-58.944-54.689-94.586-1.667-5.366.592-11.175 5.459-13.985L67.212 291.1a193.48 193.48 0 0 1 0-70.199l-42.616-24.599c-4.867-2.809-7.126-8.618-5.459-13.985 11.07-35.642 29.97-67.842 54.689-94.586a12.016 12.016 0 0 1 14.832-2.254l42.584 24.595a191.577 191.577 0 0 1 60.759-35.13V25.759a12.01 12.01 0 0 1 9.377-11.718c34.956-7.85 72.499-8.256 109.219-.007 5.49 1.233 9.403 6.096 9.403 11.723v49.184a191.555 191.555 0 0 1 60.759 35.13l42.584-24.595a12.016 12.016 0 0 1 14.832 2.254c24.718 26.744 43.619 58.944 54.689 94.586 1.667 5.366-.592 11.175-5.459 13.985L444.788 220.9a193.485 193.485 0 0 1 0 70.2zM336 256c0-44.112-35.888-80-80-80s-80 35.888-80 80 35.888 80 80 80 80-35.888 80-80z",
          ],
          "iconName": "cog",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={true}
      symbol={false}
      transform={null}
    />
     loading...
  </div>
  <div
    className="visualization__select-instructions"
  >
    Select the image to display interactively. This file must be JSON format (extension .json). If you have downloaded an analysis results folder from ProHits-viz these files will be located in the "interactive" subfolder. See the
     
    <Component
      className="visualization__select-instructions-link"
      to="/help/visualization/format"
    >
      help
    </Component>
     
    for information on the input format. If you would like to test a sample file, click
     
    <Component
      className="visualization__select-instructions-link"
      to="/visualization/samplefile/dotplot"
    >
      here
    </Component>
    .
  </div>
  <BrowserSession />
</div>
`;

exports[`Selection should display loading message 1`] = `
<div
  className="visualization__select"
>
  <div
    className="visualization__select-error"
    style={
      Object {
        "transform": "scaleY(0)",
      }
    }
  />
  <Upload
    accept=""
    action=""
    beforeUpload={[Function]}
    className=""
    data={Object {}}
    disabled={false}
    listType="text"
    multiple={false}
    name="file"
    onChange={[Function]}
    prefixCls="ant-upload"
    showUploadList={true}
    supportServerRender={true}
    type="select"
  >
    <Button
      ghost={false}
      loading={false}
      prefixCls="ant-btn"
    >
      <FontAwesomeIcon$1
        border={false}
        className="FileInput-fa-icon"
        fixedWidth={false}
        flip={null}
        icon={
          Object {
            "icon": Array [
              384,
              512,
              Array [],
              "f319",
              "M384 121.9v6.1H256V0h6.1c6.4 0 12.5 2.5 17 7l97.9 98c4.5 4.5 7 10.6 7 16.9zM248 160h136v328c0 13.3-10.7 24-24 24H24c-13.3 0-24-10.7-24-24V24C0 10.7 10.7 0 24 0h200v136c0 13.2 10.8 24 24 24zm48 140c0-6.6-5.4-12-12-12h-60v-60c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12v60h-60c-6.6 0-12 5.4-12 12v40c0 6.6 5.4 12 12 12h60v60c0 6.6 5.4 12 12 12h40c6.6 0 12-5.4 12-12v-60h60c6.6 0 12-5.4 12-12v-40z",
            ],
            "iconName": "file-plus",
            "prefix": "fas",
          }
        }
        listItem={false}
        mask={null}
        name=""
        pull={null}
        pulse={false}
        rotation={null}
        size={null}
        spin={false}
        symbol={false}
        transform={null}
      />
       Select File
    </Button>
  </Upload>
  <div
    className="visualization__select-loading"
    style={
      Object {
        "transform": "scaleY(1)",
      }
    }
  >
    <FontAwesomeIcon$1
      border={false}
      className=""
      fixedWidth={false}
      flip={null}
      icon={
        Object {
          "icon": Array [
            512,
            512,
            Array [],
            "f013",
            "M444.788 291.1l42.616 24.599c4.867 2.809 7.126 8.618 5.459 13.985-11.07 35.642-29.97 67.842-54.689 94.586a12.016 12.016 0 0 1-14.832 2.254l-42.584-24.595a191.577 191.577 0 0 1-60.759 35.13v49.182a12.01 12.01 0 0 1-9.377 11.718c-34.956 7.85-72.499 8.256-109.219.007-5.49-1.233-9.403-6.096-9.403-11.723v-49.184a191.555 191.555 0 0 1-60.759-35.13l-42.584 24.595a12.016 12.016 0 0 1-14.832-2.254c-24.718-26.744-43.619-58.944-54.689-94.586-1.667-5.366.592-11.175 5.459-13.985L67.212 291.1a193.48 193.48 0 0 1 0-70.199l-42.616-24.599c-4.867-2.809-7.126-8.618-5.459-13.985 11.07-35.642 29.97-67.842 54.689-94.586a12.016 12.016 0 0 1 14.832-2.254l42.584 24.595a191.577 191.577 0 0 1 60.759-35.13V25.759a12.01 12.01 0 0 1 9.377-11.718c34.956-7.85 72.499-8.256 109.219-.007 5.49 1.233 9.403 6.096 9.403 11.723v49.184a191.555 191.555 0 0 1 60.759 35.13l42.584-24.595a12.016 12.016 0 0 1 14.832 2.254c24.718 26.744 43.619 58.944 54.689 94.586 1.667 5.366-.592 11.175-5.459 13.985L444.788 220.9a193.485 193.485 0 0 1 0 70.2zM336 256c0-44.112-35.888-80-80-80s-80 35.888-80 80 35.888 80 80 80 80-35.888 80-80z",
          ],
          "iconName": "cog",
          "prefix": "fas",
        }
      }
      listItem={false}
      mask={null}
      name=""
      pull={null}
      pulse={false}
      rotation={null}
      size={null}
      spin={true}
      symbol={false}
      transform={null}
    />
     loading...
  </div>
  <div
    className="visualization__select-instructions"
  >
    Select the image to display interactively. This file must be JSON format (extension .json). If you have downloaded an analysis results folder from ProHits-viz these files will be located in the "interactive" subfolder. See the
     
    <Component
      className="visualization__select-instructions-link"
      to="/help/visualization/format"
    >
      help
    </Component>
     
    for information on the input format. If you would like to test a sample file, click
     
    <Component
      className="visualization__select-instructions-link"
      to="/visualization/samplefile/dotplot"
    >
      here
    </Component>
    .
  </div>
  <BrowserSession />
</div>
`;
